[workspace]
members = [
    "contracts/reputation-contract",
    "contracts/creditline-contract",
]
resolver = "2"

# Future contracts:
# - contracts/merchant-registry-contract
# - contracts/adapter-trustless-contract

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
